<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleAddEmploye"
            android:textSize="24sp"
            android:textColor="@color/primaryTextColor"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp" />

        <View
            android:layout_width="400dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginTop="2dp" />

        <!-- User Name -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nom"
                android:textSize="18sp" />
            <EditText
                android:id="@+id/Nom"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="18sp"
                android:inputType="text"
                android:background="@android:color/white"
                android:hint="@string/nom"
                android:textColor="#000000" />
        </LinearLayout>

        <!-- First Name -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prenom"
                android:textSize="18sp" />
            <EditText
                android:id="@+id/Prenom"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="18sp"
                android:background="@android:color/white"
                android:hint="@string/placeholderPrenom"
                android:inputType="text"
                android:textColor="#000000" />
        </LinearLayout>

        <!-- Telephone -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/baseline_phone_24"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/telephone"
                    android:textSize="18sp"
                    android:layout_marginStart="8dp" />
            </LinearLayout>

            <EditText
                android:id="@+id/Telephone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="18sp"
                android:background="@android:color/white"
                android:hint="@string/placeholderTelephone"
                android:inputType="phone"
                android:textColor="#000000"
                android:drawablePadding="8dp" />
        </LinearLayout>

        <!-- Email -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/baseline_email_24"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="18sp"
                    android:layout_marginStart="8dp" />
            </LinearLayout>

            <EditText
                android:id="@+id/Email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="18sp"
                android:background="@android:color/white"
                android:hint="@string/placeholderEmail"
                android:inputType="textEmailAddress"
                android:textColor="#000000"
                android:drawablePadding="8dp" />
        </LinearLayout>

        <!-- Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center">
            <Button
                android:id="@+id/back1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/back1"
                android:textSize="18sp"
                android:textColor="#FFFFFF"
                android:backgroundTint="#FF7043"
                android:elevation="4dp"
                android:layout_marginEnd="8dp"/>
            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add"
                android:textSize="18sp"
                android:textColor="#FFFFFF"
                android:backgroundTint="#66BB6A"
                android:elevation="4dp"
                android:layout_marginEnd="8dp"/>
            <Button
                android:id="@+id/getEmploye"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/getEmploye"
                android:textSize="18sp"
                android:textColor="#FFFFFF"
                android:backgroundTint="#4CAF50"
                android:elevation="4dp"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
